<resources>
    <string name="app_name">IRS-Scout</string>
    <string name="form_status">Status</string>
    <string name="form_next">Next</string>
    <string name="form_last">Previous</string>
    <string name="form_ip">192.168.42.</string>

    <string name="scout_1">Red 1</string>
    <string name="scout_2">Red 2</string>
    <string name="scout_3">Red 3</string>
    <string name="scout_4">Blue 1</string>
    <string name="scout_5">Blue 2</string>
    <string name="scout_6">Blue 3</string>
    <string name="scout_7">R Fuel</string>
    <string name="scout_8">B Fuel</string>
    <string name="scout_9">Pit</string>


    <dimen name="text_large">50sp</dimen>
    <dimen name="text_norm">20sp</dimen>
</resources>
